# pradeepas_content

./: .gitmodules  README.md
001_state_pattern/state_pattern_impl/: Iindicator.hpp  Istate_control.hpp  Iuser_inputs.hpp  Iwashing_cycles.hpp  Iwashing_machine_state.hpp  Makefile  add_water_state.cpp  add_water_state.hpp  done_state.cpp  done_state.hpp  error_state.cpp  error_state.hpp  fake_indicator.cpp  fake_indicator.hpp  fake_user_inputs.cpp  fake_washing_cycles.cpp  fake_water_sensor.cpp  idle_state.cpp  idle_state.hpp  rinse_state.cpp  rinse_state.hpp  spin_state.cpp  spin_state.hpp  standby_state.cpp  standby_state.hpp  test_washing_machine.cpp  wash_state.cpp  wash_state.hpp  washing_machine.cpp  washing_machine.hpp
001_state_pattern/usual_impl/: Iindicator.hpp  Ilaundry_sensor.hpp  Iuser_inputs.hpp  Iwashing_cycles.hpp  Iwater_sensor.hpp  Makefile  fake_indicator.cpp  fake_indicator.hpp  fake_laundry_sensor.cpp  fake_laundry_sensor.hpp  fake_user_inputs.cpp  fake_user_inputs.hpp  fake_washing_cycles.cpp  fake_washing_cycles.hpp  fake_water_sensor.hpp  indicator.cpp  indicator.hpp  laundry_sensor.cpp  laundry_sensor.hpp  test_washing_machine.cpp  user_inputs.cpp  user_inputs.hpp  washing_cycles.cpp  washing_cycles.hpp  washing_machine.cpp  washing_machine.hpp  water_sensor.hpp
003_testing_bare_metal_embedded/TestingBareMetalEmbeddeSoftware_1/: .cproject  .mxproject  .project  (+1 more)
005_tmp112_library/: CMakeLists.txt  README.md  fake_i2c_driver.cpp  fake_i2c_driver.hpp  test_tmp112_sensor.cpp  tmp112_sensor.c  tmp112_sensor.h
007_st7789_basic/: README.md
(+11 files in other folders)
